Added cancel + bug fixes